--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,13 +8,13 @@ Authors@R:
            email = "230179525@seu.edu.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: This is a custom tool for bioinformatics data anslysis, which can be downloaded and modified.
-License: GPL3
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
 	GEOquery,
 	dplyr,
-	hgu133a.db
+	hgu133a.db,
 Suggests: 
     testthat
 RoxygenNote: 7.1.0
