--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,12 @@ Description: This is a custom tool for bioinformatics data anslysis, which can b
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports:
-	GEOquery,
-	dplyr,
-	hgu133a.db,
-Suggests: 
+Depends:
+    GEOquery,
+    dplyr,
+    hgu133a.db,
+Suggests:
+    devtools,
+    roxygen2,
     testthat
 RoxygenNote: 7.1.0
